Ajout de la section contact et du footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,37 @@
         </section>
 
         <section class="contact">
-            
+            <h2>Contactez-moi</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, facilis.</p>
+            <div class="contact-item">
+                <div class="contact-left">
+                    <form action="#">
+                        <label for="nom">Nom complet</label><br>
+                        <input type="text" id="nom" placeholder="Assane Ndong FALL"><br>
+                        <label for="email">Email</label><br>
+                        <input type="email" id="email" placeholder="fassane348@gmail.com"><br>
+                        <label for="mgs">Message</label><br>
+                        <textarea name="msg" id="mgs"></textarea><br>
+                        <button><a href="#">Envoyer</a></button>
+                    </form>
+                </div>
+
+                <div class="contact-right">
+                    <img src="./images/assane-ndong-fall-3.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+
+        <div class="logo-div">
+            <div class="logo">
+                <p>Assane Ndong <span>FALL.</span></p>
+            </div>
+        </div>
+
+        <p>&copy;2025. Tous droits réservés </p>
+
+    </footer>
 </body>
