Ajout de la section score

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
             </div>
         </section>
 
+        <section class="score">
+            <div class="score-item">
+                <h2>+2ans</h2>
+                <p><i class="fa-solid fa-code"></i> d'experience</p>
+            </div>
+
+            <div class="score-item">
+                <h2>+10</h2>
+                <p><i class="fa-solid fa-laptop-code"></i> projets realises</p>
+            </div>
+
+            <div class="score-item">
+                <h2>+2</h2>
+                <p><i class="fa-solid fa-web-awesome"></i> Diplomes obtenu</p>
+            </div>
+            
+        </section>
+
         <!-- section a propos -->
         <section id="about-me">
             <div class="about-left">
