Ajout de la section competences

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </div>
         </section>
 
+        <!-- section pour les scores -->
         <section class="score">
             <div class="score-item">
                 <h2>+2ans</h2>
@@ -85,6 +86,64 @@
                 </div>
                 
             </div>
+        </section>
+
+        <section class="competences">
+            <h2>Mes Competences</h2>
+            <div class="competence-item">
+                <div class="competences-technique">
+                    <h3><i class="fa-solid fa-laptop-code"></i> Competence Technique</h3>
+                    <ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+
+                <div class="Technologies">
+                    <h3> <i class="fa-solid fa-code"></i> Technologies Maîtrisées</h3>
+                    <div class="technologies-item">
+                        <span class="tech">
+                            <i class="fa-brands fa-html5"></i>
+                            HTML
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-css3-alt"></i>
+                            CSS
+                        </span>
+                        <span class="tech">
+                        <i class="fa-brands fa-linux"></i>
+                            Linux
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-js"></i>
+                            JavaScript
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-python"></i>
+                            Python
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-react"></i>
+                            React
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-wordpress"></i>
+                            WordPress
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-angular"></i>
+                            Angular
+                        </span>
+                        <span class="tech">
+                            <i class="fa-brands fa-figma"></i>
+                            Figma
+                        </span>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <!-- section pour les projets realises -->
