Ajout des animations sur la section competences

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="#about-me">A propos</a></li>
-                        <li><a href="#">Competences</a></li>
+                        <li><a href="#competences">Competences</a></li>
                         <li><a href="#projets">Projet</a></li>
                     </ul>
                 </nav>
@@ -38,7 +38,7 @@
                 <h2>Salut!, je suis Assane Ndong <span>FALL.</span></h2>
                 <strong>Developpeur web & web mobile IA</strong>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quos consectetur <br> illo unde eveniet nobis inventore necessitatibus quam facere eos?</p><br>
-                <a href="#">A propos de moi</a>
+                <a href="#about-me">A propos de moi</a>
             </div>
 
             <div class="hero-right">
@@ -88,7 +88,7 @@
             </div>
         </section>
 
-        <section class="competences">
+        <section id="competences">
             <h2>Mes Competences</h2>
             <div class="competence-item">
                 <div class="competences-technique">
