--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assane Ndong FALL</title><link rel="stylesheet" href="style.css">
+    <title>Assane Ndong FALL</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <script src="https://kit.fontawesome.com/ffece73c02.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -14,6 +16,14 @@
             <div class="name">
                 <h1>Assane Ndong <span>FALL.</span></h1>
             </div>
+
+            <!-- Bouton burger pour mobile -->
+            <input type="checkbox" id="burger-toggle" class="burger-checkbox">
+            <label for="burger-toggle" class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
 
             <div class="menu-item">
                 <nav>
