Modification des card et la responsive sur les cards

--- a/index.html
+++ b/index.html
@@ -161,13 +161,49 @@
             <h1>Mes projets</h1>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
             <div class="card-projet">
+                
+                <div class="card-item">
+                    <div class="project-image">
+                        <img src="./images/atelier5.png" alt="Atelier5" loading="lazy">
+                        <div class="project-links">
+                            <a href="./images/atelier5.png" class="project-link" aria-label="Voir le projet"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="project-link" aria-label="Voir sur Figma"><i class="fab fa-figma"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Wergu Yaram</h3>
+                        <p>Maquette Figma pour une clinique médicale</p>
+                        <div class="project-tags">
+                            <span>Figma</span>
+                            <span>UI/UX</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-item">
+                    <div class="project-image">
+                        <img src="./images/atelier6.png" alt="Atelier6" loading="lazy">
+                        <div class="project-links">
+                            <a href="./images/atelier6.png" class="project-link" aria-label="Voir le projet"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="project-link" aria-label="Voir sur Figma"><i class="fab fa-figma"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Wergu Yaram</h3>
+                        <p>Maquette Figma pour une clinique médicale</p>
+                        <div class="project-tags">
+                            <span>Figma</span>
+                            <span>UI/UX</span>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="card-item">
                     <div class="project-image">
                         <img src="./images/atelier5.png" alt="Atelier5" loading="lazy">
                         <div class="project-links">
-                            <a href="./images/wergu.JPG" class="project-link" aria-label="Voir le projet"><i class="fas fa-eye"></i></a>
-                            <a href="https://www.figma.com/design/g34gX0aepi26psxSZfT8M4/Clinique-Wergu-Yaram?node-id=1-2&t=hvN1HN9B67RkIkFn-1" class="project-link" aria-label="Voir sur Figma"><i class="fab fa-figma"></i></a>
+                            <a href="./images/atelier5.png" class="project-link" aria-label="Voir le projet"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="project-link" aria-label="Voir sur Figma"><i class="fab fa-figma"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
